# uda-mlops-4-6

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  model_card.md  pyproject.toml  query_live_api.py  requirements.txt  sanitycheck.py
.dvc/: config
.githhub/workflows/: ci.yml
.github/workflows/: ci.yml
model/: encoder.joblib.dvc  lb.joblib.dvc  rf.joblib.dvc  slice_output.txt
screenshots/: .gitkeep
src/: main.py  train_model.py
src/ml/: data.py  model.py
tests/: main_test.py
tests/ml/: model_test.py
